--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = nodemcu-32s
+
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
 
+[env:nodemcu-32s-debug]
+platform = espressif32
+board = nodemcu-32s
+framework = arduino
+build_type = debug
