Switching to baudrate 115200 by default

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,9 +15,11 @@ default_envs = nodemcu-32s
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
+monitor_speed = 115200
 
 [env:nodemcu-32s-debug]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
 build_type = debug
+monitor_speed = 115200
